增加个人信息

--- a/about.html
+++ b/about.html
@@ -28,7 +28,8 @@ key: page-about
 
 
 <br />
-I'm lancer
+
+I'm lancer, received the Ph.D. degree with the Wuhan National Laboratory for Optoelectronics(WNLO), Huazhong University of Science and Technology (HUST), Wuhan,in 2021. I am interested in LLM, distribute database and distribute storage.
 <br />
 <br />
 <br />
