软硬协同设计的IO调度系统BurstCBS

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ key: page-about
 
 <br />
 
-I'm lancer, received the Ph.D. degree with the Wuhan National Laboratory for Optoelectronics(WNLO), Huazhong University of Science and Technology (HUST), Wuhan,in 2021. I am interested in LLM, distribute database and distribute storage.
+My name is Lancer, and I received the Ph.D. degree in Computer System Architecture from the Huazhong University of Science and Technology (HUST), Wuhan, in 2021. My research interests are focused on LLM, Storage, Database, OS and Mathematics.
 <br />
 <br />
 <br />
