--- a/about.html
+++ b/about.html
@@ -30,6 +30,9 @@ key: page-about
 <br />
 
 My name is Lancer, and I received the Ph.D. degree in Computer System Architecture from the Huazhong University of Science and Technology (HUST), Wuhan, in 2021. My research interests are focused on LLM, Storage, Database, OS and Mathematics.
+
+
+I previously worked at Alibaba and SenseTime, and I am currently responsible for inference engine optimization of LLM at a AI startup company.
 <br />
 <br />
 <br />
